always show scrollbar to prevent jumps

--- a/css/sass/_general.scss
+++ b/css/sass/_general.scss
@@ -1,6 +1,6 @@
 body {
-  padding-top: 20px;
-  padding-bottom: 40px;
+  padding: 20px 0 40px;
+  overflow-y: scroll;
 }
 
 .no-script {
